--- a/views/room.ejs
+++ b/views/room.ejs
@@ -191,19 +191,13 @@
                         <span>AR</span>
                     </div>      
 
-                    <div class="main__controls__button">
-                        <i class="fas fa-user-friends"></i>
-                        <span>Participants</span>
-                    </div>      
+                        
                 </div>
                 <div class="main__controls__block">
 
-                    <div class="main__controls__button">
-                        <i class="fas fa-comment-alt"></i>
-                        <span>Chat</span>
-                    </div>      
+                    
 
-                    <div class="main__controls__button">
+                    <div class="main__controls__button" onclick="leave()">
                         
                         <span class="leave">Leave Meeting</span>
                     </div>      
