--- a/views/room.ejs
+++ b/views/room.ejs
@@ -101,7 +101,7 @@
     function arv(){
      initialize();
      animate();
-     vidgrid.replaceChild(vidFrom,vidgrid.childNodes[0]);
+    // vidgrid.replaceChild(vidFrom,vidgrid.childNodes[0]);
     }
     
     function initialize()
